--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python,visualstudiocode
+
+credentials.json
