--- a/.gitignore
+++ b/.gitignore
@@ -268,4 +268,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python,visualstudiocode
 
-credentials.json
+db.sqlite
